# coderd/apidoc/swagger.json
@@ -4485,6 +4485,42 @@
         }
       }
     },
+    "/workspaceagents/{workspaceagent}/metadata": {
+      "get": {
+        "security": [
+          {
+            "CoderSessionToken": []
+          }
+        ],
+        "tags": ["Agents"],
+        "summary": "Get workspace agent metadata.",
+        "operationId": "get-workspace-agent-metadata",
+        "parameters": [
+          {
+            "type": "string",
+            "format": "uuid",
+            "description": "Workspace agent ID",
+            "name": "workspaceagent",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/codersdk.WorkspaceAgentMetadata"
+              }
+            }
+          }
+        },
+        "x-apidocgen": {
+          "skip": true
+        }
+      }
+    },
     "/workspaceagents/{workspaceagent}/pty": {
       "get": {
         "security": [
@@ -9868,6 +9904,17 @@
         "WorkspaceAgentLogSourceExternal"
       ]
     },
+    "codersdk.WorkspaceAgentMetadata": {
+      "type": "object",
+      "properties": {
+        "description": {
+          "$ref": "#/definitions/codersdk.WorkspaceAgentMetadataDescription"
+        },
+        "result": {
+          "$ref": "#/definitions/codersdk.WorkspaceAgentMetadataResult"
+        }
+      }
+    },
     "codersdk.WorkspaceAgentMetadataDescription": {
       "type": "object",
       "properties": {
@@ -9885,6 +9932,25 @@
         },
         "timeout": {
           "type": "integer"
+        }
+      }
+    },
+    "codersdk.WorkspaceAgentMetadataResult": {
+      "type": "object",
+      "properties": {
+        "age": {
+          "description": "Age is the number of seconds since the metadata was collected.\nIt is provided in addition to CollectedAt to protect against clock skew.",
+          "type": "integer"
+        },
+        "collected_at": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "error": {
+          "type": "string"
+        },
+        "value": {
+          "type": "string"
         }
       }
     },
